test/disabled/neg/macro-keyword-package1.check
macro-keyword-package1.scala:1: error: identifier expected but 'macro' found.
package macro
        ^
one error found
